# sst-python-ex

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  UV_ECOSYSTEM_GUIDE.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sst-env.d.ts  sst.config.ts  test_local.py  test_strands_route.py  tsconfig.json
.github/workflows/: ci-cd.yml
core/: pyproject.toml  sst.pyi
core/src/core/: __init__.py
functions/: pyproject.toml
functions/src/functions/: api.py  config.py  handler.py  handlers.py  responses.py  router.py  utils.py
functions/tests/: __init__.py  conftest.py
functions/tests/integration/: test_api_integration.py
functions/tests/unit/: test_handler.py
src/my_python_app/: __init__.py
types/: ci-sst-globals.d.ts
