[project]
name = "my-python-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean Flanagan", email = "sean.flanagan@trajectorservices.com" }
]
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["functions", "core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"